@@ -1,3 +1,9 @@
+Mon Oct 25 06:30:35 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Atomic_Op_T.h:
+        * ace/Auto_IncDec_T.h:
+          Doxygen changes
+
 Sun Oct 24 12:35:28 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Event_Handler.h:
